# ampup

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install  justfile
.agents/: settings.local.json
.agents/skills/code-check/: SKILL.md
.agents/skills/code-format/: SKILL.md
.agents/skills/code-pattern-discovery/: SKILL.md
.agents/skills/code-pattern-fmt-check/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-test/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/feature-discovery/: SKILL.md
.agents/skills/feature-fmt-check/: SKILL.md
.agents/skills/feature-status/: SKILL.md  report.py
.github/: pre-commit-config.yaml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  codeql.yml
ampup/: Cargo.toml  build.rs
ampup/src/: builder.rs  commands.rs  config.rs  download_manager.rs  github.rs  install.rs  lib.rs  main.rs  platform.rs  progress.rs  rate_limiter.rs  shell.rs  token.rs  ui.rs  updater.rs  version_manager.rs
ampup/src/commands/: build.rs  init.rs  install.rs  list.rs  uninstall.rs  update.rs  use_version.rs
ampup/src/tests/: fixtures.rs  it_ampup.rs  mod.rs
api/: latest.ts
api/tags/: [version].ts
docs/__meta__/: README.md  code-pattern-docs.md  feature-docs.md
docs/code/: apps-cli.md  errors-handling.md  errors-reporting.md  logging-errors.md  logging.md  rust-crate.md  rust-documentation.md  rust-modules-members.md  rust-modules.md  rust-types.md  test-files.md  test-functions.md  test-strategy.md
docs/features/: app-ampup.md
src/content/docs/: docs.md
(+12 files in other folders)
